src/app/layouts/default/header/menus/logo/logo.scss
@import 'pattern-library/core/pattern-library/headers';

.page-header .logo-wrapper {
    @include set-font(helper-label);

    align-items: center;
    display: flex;
    padding: 1.2rem 1.6rem;

    @at-root .active#{&} {
        align-items: flex-start;
        left: 0;
        position: absolute;
        top: 0;
    }

    @include wider-than($tablet-max) {
        display: grid;
        grid-column-gap: 1rem;
        grid-template-columns: min-content auto;
        height: 100%;
        left: auto;
        position: static;
        top: auto;
        width: 50rem;
    }

    .logo {
        height: 2.8rem;

        a {
            display: block;
            height: 100%;

            &:active,
            &:focus,
            &:hover {
                &::after {
                    background-color: transparent;
                    box-shadow: none;
                }
            }
        }

        img {
            height: 100%;
        }

        .logo-color {
            display: inline-block;

            @include wider-than($tablet-max) {
                @at-root .transparent#{&} {
                    display: none;
                }
            }
        }

        .logo-white {
            display: none;

            @include wider-than($tablet-max) {
                @at-root .transparent#{&} {
                    display: inline-block;
                }
            }
        }
    }

    &.streamlined {
        @include wider-than($tablet-max) {
            align-items: center;
            grid-template-columns: repeat(3, min-content);
            width: auto;
        }
    }

    .logo-divider {
        background-color: ui-color(form-border);
        display: block;
        height: 2.8rem;
        width: 0.1rem;

        @include width-up-to($tablet-max) {
            display: none;
        }
    }

    .rice-logo {
        display: none;

        @include wider-than($tablet-max) {
            align-items: center;
            display: inline-flex;

            img {
                height: 2.4rem;
            }
        }
    }

    .logo-quote {
        color: os-color(gray);
        display: inline-block;
        height: 0;
        transform: scale3d(0, 0, 0);
        width: 0;

        @media (min-width: 1000px) {
            height: auto;
            transform: scale3d(1, 1, 1);
            width: auto;
        }

        @at-root .transparent#{&} {
            color: text-color(white);
        }

    }
}

